--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Phone Price Predictor</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"href="{{ url_for('static', path='style.css') }}" />
 </head>
 <body>
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
